<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0CFD0"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="#888888"
        android:backgroundTint="#B7B7B7"
        android:gravity="center"
        android:text="@string/text_activity_main"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <EditText
        android:id="@+id/edit_text_1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:background="#888888"
        android:backgroundTint="#B7B7B7"
        android:ems="10"
        android:hint="@string/type_any_text_value"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <Button
        android:id="@+id/button1"
        android:layout_width="190dp"
        android:layout_height="66dp"
        android:backgroundTint="#777777"
        android:text="@string/button_name"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.267" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#565656"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>